[project]
name = "activation_store"
version = "0.1.0"
description = "Cache transformer activations to disk"
readme = "README.md"
authors = [
    { name = "wassname", email = "1103714+wassname@users.noreply.github.com" }
]
urls = { "Repository" = "https://github.com/wassname/activation_store.git"}
keywords = ["transformers", "cache", "activations", "huggingface"]
requires-python = ">=3.10"
dependencies = [
    "baukit",
    "datasets>=3.3.0",
    "einops>=0.8.1",
    "jaxtyping>=0.2.38",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "skorch>=1.1.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["activation_store"]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit.git" ,  rev = "9d51abd51ebf29769aecc38c4cbef459b731a36e" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "accelerate>=1.3.0",
    "pandas>=2.2.3",
]
